--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.20.1",
     "mongoose": "^4.11.2",
     "nconf": "^0.8.4",
+    "redis": "^2.8.0",
     "rxjs": "^5.4.2",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
