--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "bunyan": "^1.8.12",
+        "bunyan-prettystream": "^0.1.3",
         "consul": "^0.29.0",
         "express": "^4.16.2",
         "filewatcher": "^3.0.1",
