--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "applicationinsights": "^1.0.2",
         "bunyan": "^1.8.12",
         "bunyan-prettystream": "^0.1.3",
         "consul": "^0.29.0",
