--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
         "applicationinsights": "^1.0.2",
         "bunyan": "^1.8.12",
         "bunyan-prettystream": "^0.1.3",
-        "consul": "^0.29.0",
+        "consul": "^0.34.0",
         "express": "^4.16.2",
         "filewatcher": "^3.0.1",
         "mkdirp": "^0.5.1",
         "moment": "^2.20.1",
-        "mongoose": "^4.11.2",
-        "nconf": "^0.8.4",
+        "mongoose": "^5.2.5",
+        "nconf": "^0.10.0",
         "redis": "^2.8.0",
-        "rxjs": "^5.4.2",
+        "rxjs": "^6.2.2",
+        "rxjs-compat": "^6.2.2",
         "socket.io": "^2.0.3",
         "socket.io-client": "^2.0.3",
         "socket.io-redis": "^5.1.0",
-        "swagger-parser": "^4.0.0",
+        "swagger-parser": "^5.0.0",
         "swagger-tools": "^0.10.3",
         "underscore": "^1.8.3",
         "uuid": "^3.2.1",
-        "uws": "9.14.0",
         "vantage": "^1.7.0",
         "vorpal": "^1.12.0",
         "yamljs": "^0.3.0"
