--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
         "filewatcher": "^3.0.1",
         "mkdirp": "^0.5.1",
         "moment": "^2.20.1",
-        "mongoose": "^5.2.5",
+        "mongoose": "^5.2.8",
         "nconf": "^0.10.0",
+        "node-object-hash": "^1.4.1",
         "redis": "^2.8.0",
         "rxjs": "^6.2.2",
         "rxjs-compat": "^6.2.2",
